force-app/main/default/objects/ErrorTagCheck__c/ErrorTagCheck__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to check the errors number for each tag name and send an alert email if they increase to much.</description>
    <label>Error Tag Check</label>
</CustomObject>