force-app/main/default/objects/ErrorTagCheck__c/fields/DeltaError__c.field-meta.xml
<CustomField>
    <fullName>DeltaError__c</fullName>
    <description>The error delta from the last run to the average number of errors.</description>
    <label>Delta Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>