force-app/main/default/objects/ErrorTagCheck__c/fields/EmailList__c.field-meta.xml
<CustomField>
    <fullName>EmailList__c</fullName>
    <description>The list of email addresses to send the alert (used only in the default setting record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email List</label>
    <type>TextArea</type>
</CustomField>