force-app/main/default/objects/ErrorTagCheck__c/fields/EmailSent__c.field-meta.xml
<CustomField>
    <fullName>EmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inform if an email has been sent about the corresponding tag name with the last run.</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>