force-app/main/default/objects/ErrorTagCheck__c/fields/ErrorNumber__c.field-meta.xml
<CustomField>
    <fullName>ErrorNumber__c</fullName>
    <description>The number of errors got for the corresponding tag name for the last run.</description>
    <label>Error Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>