force-app/main/default/objects/ErrorTagCheck__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the alert can be sent (must be configured on the tag name record and the default record).</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>