force-app/main/default/objects/ErrorTagCheck__c/fields/LastRunDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastRunDateTime__c</fullName>
    <description>Indicate the date time of the last run of the batch.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Run Date Time</label>
    <type>DateTime</type>
</CustomField>