force-app/main/default/objects/ErrorTagCheck__c/fields/MeanErrorNumber__c.field-meta.xml
<CustomField>
    <fullName>MeanErrorNumber__c</fullName>
    <description>Compute the mean of error with the total number of errors for the corresponding tag name and the total of run.</description>
    <label>Mean Error Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>