force-app/main/default/objects/ErrorTagCheck__c/fields/MinimumErrorsAlert__c.field-meta.xml
<CustomField>
    <fullName>MinimumErrorsAlert__c</fullName>
    <description>The minimum number of error corresponding to a tag name with one run for the alert to be sent (must be configured on the tag name record and the default record).</description>
    <label>Minimum Errors Alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>