force-app/main/default/objects/ErrorTagCheck__c/fields/NumberOfRun__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRun__c</fullName>
    <description>Total number of run.</description>
    <label>Number of run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>