force-app/main/default/objects/ErrorTagCheck__c/fields/PercentageLimitAlert__c.field-meta.xml
<CustomField>
    <fullName>PercentageLimitAlert__c</fullName>
    <description>The percentage limit that the error delta from the last run to the average number of errors must raise to send the alert  (must be configured on the tag name record and the default record).</description>
    <label>Percentage Limit Alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>