force-app/main/default/objects/ErrorTagCheck__c/fields/PreviousErrorNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousErrorNumber__c</fullName>
    <description>Total error number.</description>
    <label>Previous Error Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>