force-app/main/default/objects/ErrorTagCheck__c/fields/TagName__c.field-meta.xml
<CustomField>
    <fullName>TagName__c</fullName>
    <description>Tag Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tag Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>